--- a/compose.postgres.yml
+++ b/compose.postgres.yml
@@ -4,7 +4,7 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_USER: "wakapi"
-      POSTGRES_PASSWORD: "wakapi"        # alternatively, set POSTGRES_PASSWORD directly without the use of secrets
+      POSTGRES_PASSWORD: "wakapi"
       POSTGRES_DB: "wakapi"
     ports:
       - "5432:5432"
